--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,18 @@
 name = "CubeFiles"
 uuid = "d0c08004-fc0f-4ace-841b-49e627aa3981"
 authors = ["Rashid Rafeek <rashidrafeek@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
+
+[deps]
+AtomsBase = "a963bdd2-2df7-4f54-a1ee-49d51e6be12a"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-julia = "1.6.7"
+AtomsBase = "0.5"
+StaticArrays = "1"
+Unitful = "1"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
