--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,13 @@ version = "0.1.0"
 AtomsBase = "a963bdd2-2df7-4f54-a1ee-49d51e6be12a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+UnitfulAtomic = "a7773ee8-282e-5fa2-be4e-bd808c38a91a"
 
 [compat]
 AtomsBase = "0.5"
 StaticArrays = "1"
 Unitful = "1"
+UnitfulAtomic = "1"
 julia = "1.9"
 
 [extras]
